gitops/amer-west/spaces/gitops-dev/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ""
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "80"
    healthcheck.gslb.tanzu.vmware.com/service: placeholder
  name: placeholder
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: https-placeholder
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: placeholder
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
